--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.6.1",
+    "sass": "^1.43.2",
     "vue": "^3.2.16"
   },
   "devDependencies": {
