--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "keepme.app.com",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --host",
+    "serve": "vite preview",
     "build": "vite build",
-    "serve": "vite preview"
+    "dev": "vite --host"
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.1",
+    "register-service-worker": "^1.7.2",
     "sass": "^1.43.2",
     "vue": "^3.2.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
+    "@vue/cli-plugin-pwa": "^5.0.0-beta.6",
     "vite": "^2.6.4"
   }
 }
