--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.1",
     "register-service-worker": "^1.7.2",
+    "router": "^2.0.0-beta.1",
     "sass": "^1.43.2",
-    "vue": "^3.2.16"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
