--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
+    "axios": "^0.20.0-0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.1",
+    "qs": "^6.10.1",
     "register-service-worker": "^1.7.2",
     "router": "^2.0.0-beta.1",
     "sass": "^1.43.2",
+    "vue-axios": "^3.3.7",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
