--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.20.0-0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.1",
+    "js-cookie": "^3.0.1",
     "qs": "^6.10.1",
     "register-service-worker": "^1.7.2",
     "router": "^2.0.0-beta.1",
     "sass": "^1.43.2",
+    "size-sensor": "^1.0.1",
     "vue-axios": "^3.3.7",
     "vuex": "^4.0.2"
   },
