--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0-0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.1",
+    "mitt": "^3.0.0",
     "qs": "^6.10.1",
     "register-service-worker": "^1.7.2",
     "router": "^2.0.0-beta.1",
